--- a/views/cookies_data.ejs
+++ b/views/cookies_data.ejs
@@ -1,7 +1,7 @@
 <!-- Update your HTML to add space between buttons -->
 <h1 style="text-align: center">THIS IS COOKIES DATA</h1>
 <a href="/cookies_add">
-  <button type="button" class="btn btn-primary">Add Data</button>
+  <button type="button" class="btn btn-primary mb-2">Add Data</button>
 </a>
 <table class="table table-striped">
   <thead>
@@ -29,7 +29,6 @@
             class="btn btn-primary mr-2"
             >Detail</a
           >
-          <p></p>
           <a
             href="/update_cookies/<%= cookiesdata.ID_Cookies %>"
             class="btn btn-success mr-2"
@@ -39,21 +38,23 @@
           <a
             href="/delete_cookies/<%= cookiesdata.ID_Cookies %>"
             class="btn btn-danger"
-            onclick="return confirmDelete()"
+            id="deleteButton"
             >Delete</a
           >
         </div>
       </td>
-
-      <script>
-        function confirmDelete() {
-          var confirmation = confirm(
-            "Are you sure you want to delete this data?"
-          );
-          return confirmation;
-        }
-      </script>
     </tr>
     <% }) %>
   </tbody>
 </table>
+
+<script>
+  // Tangkap elemen tombol delete
+  const deleteButton = document.getElementById("deleteButton");
+
+  // Tambahkan event listener untuk onclick
+  deleteButton.addEventListener("click", function () {
+    var confirmation = confirm("Are you sure you want to delete this data?");
+    return confirmation;
+  });
+</script>
