--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -34,7 +34,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/cookies"
-                >Cookies</a
+                >Data Cookies</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/stock"
+                >Stok Cookies</a
               >
             </li>
           </ul>
